fix z-index submenu

--- a/p/themes/base-theme/frss.css
+++ b/p/themes/base-theme/frss.css
@@ -2456,7 +2456,7 @@ html.slider-active {
 
 	.dropdown-target:target ~ .dropdown-menu {
 		display: table-cell;
-		z-index: 50;
+		z-index: 86;
 
 	}
 
